
[project]
name = "muxtools"
version = "0.2.2"
description = "A library for various muxing and automation tools for anything and everything fansubbing related"
authors = [{ name = "Vodes", email = "vodes.imp@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "fontcollector>=3.0.0",
    "ass>=0.5.3",
    "wget>=3.2",
    "py7zr>=0.20.5",
    "pymediainfo>=6.0.1",
    "rich>=13.1.0",
    "pyparsebluray>=0.1.4",
    "pydantic>=2.5.0",
    "psutil>=5.6.4",
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MPL 2.0" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Source Code" = "https://github.com/Vodes/muxtools"

[project.scripts]
muxtools = "muxtools:entry_point"

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = ["E722"]
fixable = ["F541", "F401", "E712", "E711"]
exclude = ["__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false